--- a/PMSApi/appsettings.json
+++ b/PMSApi/appsettings.json
@@ -1,9 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "SQLDbConnection": ""
+    },
+    "Jwt": {
+        "Key": "",
+        "Issuer": "",
+        "Audience": ""
     }
-  },
-  "AllowedHosts": "*"
 }
